# term-1

./: README.md
algorithms/1-linear/: main  main.c  Лабораторна робота 1. Лінійні алгоритми.gsheet
algorithms/2-if/: Algorithms 2.drawio  Makefile  Untitled document.gdoc  Лабораторна робота №2.gdoc
algorithms/2-if/src/: geometry.c  geometry.h  main.c
algorithms/2-if/test/: test_main.c
algorithms/3-cyclic/: meson.build  Лаба 3.drawio  Лабораторна робота №3.gdoc
algorithms/3-cyclic/src/: hello.c  hello.h  main.c
algorithms/3-cyclic/test/: hello_test.c  hello_test.h  test.c
algorithms/4-functions/: meson.build  run_demo_tests.sh  АСД 4.drawio
algorithms/4-functions/src/: main.c
algorithms/4-functions/src/square/: square.c  square.h
algorithms/4-functions/test/: test.c
algorithms/4-functions/test/square/: test_square.c  test_square.h
algorithms/5-data-structures/: АСД лаба 5.drawio
fundamentals-of-programming/2-linear/: Makefile  README.md
fundamentals-of-programming/2-linear/docs/: КП №2. Програмування лінійних алгоритмів.docx
fundamentals-of-programming/2-linear/include/: constants.h
fundamentals-of-programming/2-linear/src/: main.c  triangle.c
fundamentals-of-programming/2-linear/test/: triangle_test.c
fundamentals-of-programming/2/include/: triangle.h  utils.h
fundamentals-of-programming/2/src/: utils.c
fundamentals-of-programming/3-if/: meson.build
fundamentals-of-programming/3-if/src/: main.c
fundamentals-of-programming/3-if/src/input/: input.c  input.h
fundamentals-of-programming/3-if/src/root/: root.c  root.h
fundamentals-of-programming/3-if/test/: .gitignore  test.c
fundamentals-of-programming/3-if/test/demo/: demo_precision.py  demo_tests.py  precision.csv  test_output_1.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt
fundamentals-of-programming/3-if/test/input/: check_input_test.c  custom_input_test.c  input_test.h
fundamentals-of-programming/3-if/test/root/: root_test.c  root_test.h
fundamentals-of-programming/4-array/: meson.build
fundamentals-of-programming/4-array/src/: main.c
fundamentals-of-programming/4-array/src/input/: common_utils.c  float_utils.c  input.h
fundamentals-of-programming/4-array/test/: test.c
fundamentals-of-programming/4-array/test/input/: test_common_utils.c  test_float_utils.c  test_input.h  utils.c
fundamentals-of-programming/5-string/: meson.build
fundamentals-of-programming/5-string/src/: main.c  main.h  options.c
fundamentals-of-programming/5-string/src/input/: input.h  int.c  string.c  utils.c
fundamentals-of-programming/5-string/src/string/: random.c  sort.c
fundamentals-of-programming/6-dynamic-array/: meson.build
fundamentals-of-programming/6-dynamic-array/docs/: main.tex  preamble.tex  title.tex
fundamentals-of-programming/6-dynamic-array/src/: algorithm.c  algorithm.h  main.c
fundamentals-of-programming/6-dynamic-array/src/common/: constants.h  types.h
fundamentals-of-programming/6-dynamic-array/src/io/: double.c  double.h  equations.c  equations.h  int.c  int.h  utils.c  utils.h  validators.c  validators.h
fundamentals-of-programming/7-functions/: CMakeLists.txt  build.sh
fundamentals-of-programming/7-functions/src/: .clang-format  algorithm.c  algorithm.h  main.c  main.h
fundamentals-of-programming/7-functions/src/io/: choices.h  double.c  int.c  validators.c  validators.h
fundamentals-of-programming/8-structures/src/: algorithm.c  algorithm.h  main.c  main.h
fundamentals-of-programming/8-structures/src/common/: types.h
fundamentals-of-programming/8-structures/src/io/: .gitignore  choices.c  double.c  double.h  int.h  utils.c  utils.h  validators.c  validators.h
fundamentals-of-programming/9-files/: CMakeLists.txt  build.sh  errors  ЄС
fundamentals-of-programming/9-files/docs/: .gitignore  main.tex  preamble.tex  title.tex  перемога
fundamentals-of-programming/9-files/docs/test/: 1.csv  2.csv  3.csv  4.csv  f0.csv
fundamentals-of-programming/9-files/src/: main.c
fundamentals-of-programming/9-files/src/actions/: actions.h  files.c  misc.c  records.c  regions.c  utils.c  utils.h
fundamentals-of-programming/9-files/src/common/: common.h  fileContext.c  sort.c  stack.c
fundamentals-of-programming/9-files/src/io/: choices.c  io.h  number.c  string.c  utils.c  utils.h  validators.c
fundamentals-of-programming/9-files/src/menu/: default.c  menu.c  menu.h
math/test/: Типова розрахункова робота 3.rnote
ukrainian/: Інструменти для вдалого тексту.docx
